--- a/public/style.css
+++ b/public/style.css
@@ -857,6 +857,7 @@ a {
     grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
     gap: 22px;
     filter: drop-shadow(0px 0px 2px #969696);
+    margin: auto;
 }
 
 .word {
